GROW-532 Add overflow:hidden to avoid long urls in content to overflow.

--- a/app/Gallery.css
+++ b/app/Gallery.css
@@ -8,6 +8,7 @@
     padding: 20px;
     margin: 10px auto;
     transition: all .2s ease-in-out;
+    overflow: hidden;
 }
 
 .rwp-article:hover {
